Project

General

Profile

Actions

Bug #5775

closed

BigDecimal does not follow Allocation Framework

Bug #5775: BigDecimal does not follow Allocation Framework

Added by nobu (Nobuyoshi Nakada) almost 15 years ago. Updated almost 15 years ago.

Status:
Closed
Target version:
ruby -v:
2.0.0
Backport:
[ruby-core:<unknown>]

Description

It still uses very old style, overriding Class.new method.


Related issues 1 (0 open1 closed)

Blocks Ruby - Bug #5773: bigdecimal comparison raises SystemStackErrorClosedmrkn (Kenta Murata)Actions
Actions

Also available in: PDF Atom