* ext/bigdecimal/bigdecimal.c (BigDecimal_s_allocate): follow   Allocation Framework.  [Bug #5775]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34089 b2dd03c8-39d4-4d8f-98ff-823fe69b080e